Fixing line wrapping of site's title

--- a/docs/.vuepress/style.styl
+++ b/docs/.vuepress/style.styl
@@ -17,6 +17,10 @@ h1, h2, h3, h4, h5, h6,
     color: #b9b9b9 !important;
 }
 
+.navbar .sitename {
+    white-space: nowrap;
+}
+
 .navbar .site-name::before {
     content: url(/isf-logo-small.svg);
 }
